# pwgen

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: defect-report copy.yaml  feature.yaml
.github/workflows/: codeql-analysis.yml
src/pwgen_thecharge/: pwgen.py
